Fix liquid problems

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
  
-  {{% if page.comments %}}
+  {% if page.comments %}
   {% include disqus.html %}
-  {{% endif %}}
+  {% endif %}
 </article>
